--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "vscode": "^1.17.0"
   },
   "categories": ["Themes"],
-  "icon": "preview.png",
+  "icon": "./images/preview.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/davidleininger/cobaltnext-vscode.git"
