--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "CobaltNext",
-  "displayName": "Cobalt Next",
-  "description":
-    "If Oceanic Next and Cobalt2 made a baby in the form of a theme for VSCode. Style whole window.",
-  "version": "0.0.2",
-  "publisher": "dline",
-  "engines": {
-    "vscode": "^1.17.0"
-  },
-  "categories": ["Themes"],
-  "icon": "images/preview.png",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/davidleininger/cobaltnext-vscode.git"
-  },
-  "contributes": {
-    "themes": [
-      {
-        "label": "Cobalt Next",
-        "uiTheme": "vs-dark",
-        "path": "./themes/CobaltNext.json"
-      }
-    ]
-  }
+    "name": "CobaltNext",
+    "displayName": "Cobalt Next",
+    "description": "If Oceanic Next and Cobalt2 made a baby in the form of a theme for VSCode. Style whole window.",
+    "version": "0.0.3",
+    "publisher": "dline",
+    "engines": {
+        "vscode": "^1.17.0"
+    },
+    "categories": [
+        "Themes"
+    ],
+    "icon": "images/preview.png",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/davidleininger/cobaltnext-vscode.git"
+    },
+    "contributes": {
+        "themes": [
+            {
+                "label": "Cobalt Next",
+                "uiTheme": "vs-dark",
+                "path": "./themes/CobaltNext.json"
+            }
+        ]
+    }
 }
