--- a/package.json
+++ b/package.json
@@ -1,37 +1,35 @@
 {
-    "name": "CobaltNext",
-    "displayName": "Cobalt Next",
-    "description": "If Oceanic Next and Cobalt2 made a baby in the form of a theme for VSCode.",
-    "version": "0.4.3",
-    "publisher": "dline",
-    "engines": {
-        "vscode": "^1.17.0"
-    },
-    "categories": [
-        "Themes"
-    ],
-    "icon": "images/preview.png",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/davidleininger/cobaltnext-vscode.git"
-    },
-    "contributes": {
-        "themes": [
-            {
-                "label": "Cobalt Next",
-                "uiTheme": "vs-dark",
-                "path": "./themes/CobaltNext.json"
-            },
-            {
-                "label": "Cobalt Next Dark",
-                "uiTheme": "vs-dark",
-                "path": "./themes/CobaltNext-Dark.json"
-            },
-            {
-                "label": "Cobalt Next Minimal",
-                "uiTheme": "vs-dark",
-                "path": "./themes/CobaltNext-Minimal.json"
-            }
-        ]
-    }
+  "name": "CobaltNext",
+  "displayName": "Cobalt Next",
+  "description": "If Oceanic Next and Cobalt2 made a baby in the form of a theme for VSCode.",
+  "version": "0.4.0",
+  "publisher": "dline",
+  "engines": {
+    "vscode": "^1.17.0"
+  },
+  "categories": ["Themes"],
+  "icon": "images/preview.png",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/davidleininger/cobaltnext-vscode.git"
+  },
+  "contributes": {
+    "themes": [
+      {
+        "label": "Cobalt Next",
+        "uiTheme": "vs-dark",
+        "path": "./themes/CobaltNext.json"
+      },
+      {
+        "label": "Cobalt Next Dark",
+        "uiTheme": "vs-dark",
+        "path": "./themes/CobaltNext-Dark.json"
+      },
+      {
+        "label": "Cobalt Next Minimal",
+        "uiTheme": "vs-dark",
+        "path": "./themes/CobaltNext-Minimal.json"
+      }
+    ]
+  }
 }
