--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "CobaltNext",
   "displayName": "Cobalt Next",
   "description": "If Oceanic Next and Cobalt2 made a baby in the form of a theme for VSCode.",
-  "version": "0.4.4",
+  "version": "0.4.3",
   "publisher": "dline",
   "engines": {
     "vscode": "^1.17.0"
   },
-  "categories": [
-    "Themes"
-  ],
+  "categories": ["Themes"],
   "icon": "images/preview.png",
   "repository": {
     "type": "git",
